kubernetes/apps/ai/paperless-ai/app/httproute.yaml
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: paperless-ai-canonical
  annotations:
    gatus.home-operations.com/endpoint: |
      name: paperless-ai
      group: ai
spec:
  hostnames:
    - paperless-ai.jptr.zebernst.dev
  parentRefs:
    - name: tailscale
      namespace: kube-system
      sectionName: https-canon
  rules:
    - backendRefs:
        - name: paperless-ai
          port: 3000
